--- a/卡片/城市生活便利性评价指标.md
+++ b/卡片/城市生活便利性评价指标.md
@@ -1,15 +1,17 @@
 城市生活便利性评价指标
 
-知城·便利店指数： 想要衡量的是，一座城市对于生活在其中的人来讲是否已经足够便利。这里所说的便利店有着较广泛的含义，包括国内品牌连锁便利店、外资便利店、杂货店，还包括小本经营的夫妻老婆店。前两者主要在一线、新一线、二线城市中发展，而后两者则满足了三线及以下城市日常便利消费需求。
+关于城市的便利问题，我们可以用便利店指数来衡量。便利店指数想要衡量的是一座城市对于生活在其中的人来讲是否已经足够便利。这里所说的便利店有着较广泛的含义，包括国内品牌连锁便利店、外资便利店、杂货店，还包括小本经营的夫妻老婆店。前两者主要在一线、新一线、二线城市中发展，而后两者则满足了三线及以下城市日常便利消费需求。指数越大代表该城市越便利。
 
-以下为2017年的城市便利指数，能看出主要一线城市的便利程度还是高于二线城市。
+以下为2017年的城市便利指数，能看出主要一线城市的便利程度还是高于二线城市，人更倾向于喜欢生活在更便利的环境中，大城市的便利性往往也是考虑是否留在北上广大城市的一个重要参考点。
 
-![2017年城市便利指数](https://user-images.githubusercontent.com/6251887/64624455-40558f80-d41d-11e9-819a-ca91928609f1.png)
+![2017年便利店指数](https://raw.githubusercontent.com/junstudys/images/master/2017%E5%B9%B4%E4%BE%BF%E5%88%A9%E5%BA%97%E6%8C%87%E6%95%B0.png)
 
 
-大城市地铁交通线网络纵横交错，大城市的交通便利是毋庸置疑的。（已北京为例）
-![北京地铁](http://jtapi.bendibao.com/ditie/inc/bj/xianluda.gif)
+
+大城市的轨道交通便利是毋庸置疑的，高德地图发布的《2016年度中国主要城市公共交通大数据分析报告》里发现北上广深轨道交通运营里程占全国总里程的46%，轨道交通的发达也是选择留在大城市的一个原因。
+
 参考资料
+
 - [便利店的东风来了，哪个城市在这一业态上走得最前？](https://mp.weixin.qq.com/s/i9lo8NuLWPR1xHA6oHc5Zw)
 - [各城市的知城·便利店指数](https://www.cbnweek.com/articles/normal/18026>)
 - [基于POI 数据的城市生活便利度指数研究](<https://mp.weixin.qq.com/s?__biz=MzA3MTE4Mzc5OA==&mid=2658450996&idx=2&sn=5bbe3728117761004ec61a268204f8ac&scene=4#wechat_redirect> )
