--- a/卡片/#中立#城市圈.md
+++ b/卡片/#中立#城市圈.md
@@ -3,3 +3,13 @@
 
 我们中国有五个大的城市群，70 年代末，改革开放开始发展的主要是深圳、广州；后来 90 年代开发浦东，那时上海、长三角发展起来了；然后 2001 年北京申奥成功，极大地推动了北京的建设，也带动了京津冀地区的发展。京津冀这片原本叫环渤海，但是其他地方并未按预期发展，所以最终得名京津冀，当然，现在又加上了雄安，所以将来就会变成京津雄。08、09 年的金融危机之后我们的发展中心就开始转移到了长江中游，主要以武汉、长沙、四川、重庆，成都这些地方为主。这五大城市群，是国家级的，是我们中国未来发展的重点。
 
+
+![](https://imagerepos.oss-cn-beijing.aliyuncs.com/images/WX20190911-151846@2x_new.png)
+
+
+![](https://imagerepos.oss-cn-beijing.aliyuncs.com/images/WX20190911-153128@2x_new.png)
+
+
+每一个圈都要比之前的一个圈要大的多，因为后面圈需要的投资和人才都要比前面多很多，这是演化的基本特点。你看外面的圈是一条虚线，虚线意味着未来可以继续扩大，这个空间的边界由谁来确定呢，当然是由现场在座年轻人来确定。
+
+
