--- a/卡片/#正方#一线大城市教育.md
+++ b/卡片/#正方#一线大城市教育.md
@@ -1,2 +1,5 @@
 # 一线大城市教育
 
+一线城市家长们普通更重视教育，这里同时有更优质的师资力量与更好的学习环境。
+
+一是一线城市大环境氛围导致了一线城市教育比其他二线城市更为激烈，二是大城市家长们的人文平均素质相对二线城市更高，家长们更重视教育，也更利于创造更好的学习环境。
