--- a/卡片/#反方#大城市房价.md
+++ b/卡片/#反方#大城市房价.md
@@ -1,6 +1,10 @@
 # 大城市房价
 
-大城市的房价一直居高不下，这对于想长期留在大城市发展的来说无疑是令人忧心的一件事情，这意味这绝大多数人难以支付北上广大城市的房价，即使是在大城市奋斗了几年，最终发现自己在这城市始终还是一个外人，这可能迫使一些人最终还是逃离的北上广大城市，选择离家比较近的二三线城市。
+大城市的房价一直居高不下，这对于想长期留在大城市发展的来说无疑是令人困扰的一件事情，这意味这绝大多数人难以支付北上广大城市的房价。
+
+安居客公布的2019年房价里，北京、深圳、上海房价排名前三，每平米高达5万以上，这对于绝大多数白领工作人员都是难以支付的高价。
+
+即使他们是在大城市奋斗了几年，最终发现自己在这城市始终还是一个外人，这可能迫使一些人最终还是逃离的北上广大城市，选择离家比较近的二三线城市。
 
 
 
