--- a/卡片/#正方#一线大城市教育.md
+++ b/卡片/#正方#一线大城市教育.md
@@ -1,5 +1,7 @@
-# 一线大城市教育
+## 一线大城市教育
 
-一线城市家长们普通更重视教育，这里同时有更优质的师资力量与更好的学习环境。
+很多人在北上广深奋斗是为了下一代，由于资源的分配不均，他们更倾向于选择去资源多的地方。一线城市的北京、上海教育资源属于全国最好的。一线城市家长们普通更重视教育，这里同时有更优质的师资力量与更好的学习环境。
 
-一是一线城市大环境氛围导致了一线城市教育比其他二线城市更为激烈，二是大城市家长们的人文平均素质相对二线城市更高，家长们更重视教育，也更利于创造更好的学习环境。
+我们查找了全国高校的数据，发现在中国的重点高校分布中，北京市重点高校有26所，占全部高校总量的23.42%，上海市重点高校有10所，占全部高校总数的10.01%。这说明了为什么这么多人为了教育愿意留在北京、上海这种一线城市。广州的重点大学只有4所，与其他的二线城市相比并没有多大优势，深圳由于城市太过于年轻文化底蕴不厚没有重点大学。如果看重教育资源建议留在北京市，其次是上海，一线城市的深圳、广州不建议纳入考虑范围。
+
+![](https://raw.githubusercontent.com/junstudys/images/master/%E6%AD%A3%E6%96%B9-%E9%87%8D%E7%82%B9%E9%AB%98%E6%A0%A1%E5%88%86%E5%B8%83.png)
