--- a/卡片/#正方#勇敢走出去与留在大城市，不要被温水煮青蛙.md
+++ b/卡片/#正方#勇敢走出去与留在大城市，不要被温水煮青蛙.md
@@ -1,3 +1,4 @@
-# 温水煮青蛙
+## 温水煮青蛙
 
-所谓长痛不然短痛，有时候做决定需要勇气。
+所谓长痛不如短痛，有时候做决定需要勇气，不希望发生温水煮青蛙的情况。年少时有想去外面闯荡的想法，但没有勇气与十足的决心，多年后你回过头来，后悔当初为什么不勇敢一点，就算在一线大城市买不起房，起码自己闯荡过，内心无怨无悔。
+
