--- a/卡片/#正方#城市生活便利性评价指标.md
+++ b/卡片/#正方#城市生活便利性评价指标.md
@@ -1,4 +1,4 @@
-城市生活便利性评价指标
+## 城市生活便利性评价指标
 
 关于城市的便利问题，我们可以用便利店指数来衡量。便利店指数想要衡量的是一座城市对于生活在其中的人来讲是否已经足够便利。这里所说的便利店有着较广泛的含义，包括国内品牌连锁便利店、外资便利店、杂货店，还包括小本经营的夫妻老婆店。前两者主要在一线、新一线、二线城市中发展，而后两者则满足了三线及以下城市日常便利消费需求。指数越大代表该城市越便利。
 
@@ -9,11 +9,3 @@
 
 
 大城市的轨道交通便利是毋庸置疑的，高德地图发布的《2016年度中国主要城市公共交通大数据分析报告》里发现北上广深轨道交通运营里程占全国总里程的46%，轨道交通的发达也是选择留在大城市的一个原因。
-
-参考资料
-
-- [便利店的东风来了，哪个城市在这一业态上走得最前？](https://mp.weixin.qq.com/s/i9lo8NuLWPR1xHA6oHc5Zw)
-- [各城市的知城·便利店指数](https://www.cbnweek.com/articles/normal/18026>)
-- [基于POI 数据的城市生活便利度指数研究](<https://mp.weixin.qq.com/s?__biz=MzA3MTE4Mzc5OA==&mid=2658450996&idx=2&sn=5bbe3728117761004ec61a268204f8ac&scene=4#wechat_redirect> )
-- [北上广深，谁满足了你对便利店的终极幻想？](<https://36kr.com/p/5155502> )
-- [小区“15分钟社区生活圈”空间聚类研究——基于POI数据（张波等）](http://www.stats.gov.cn/tjzs/tjsj/tjcb/dysj/201902/t20190202_1648188.html)
