--- a/卡片/#正方#大城市就业.md
+++ b/卡片/#正方#大城市就业.md
@@ -1,4 +1,4 @@
-# 一线城市工作机会与薪酬
+## 一线城市工作机会与薪酬
 
 C：正因为大城市的就业机会多，工资相对二线城市也更高，才会有越来越多的白领工作者涌入大城市。
 
@@ -19,3 +19,5 @@ D：在薪酬方面，我们以互联网行业为例。2019年艾瑞咨询公司
 R：不过杭州的平均薪资高于广州，互联网人才人均每月可拿超过1万元，且杭州作为新一线城市，经济发展迅速，生活较为舒适，对人才的吸引力很大，同样的还是难以撼动北京、上海高薪带来的诱惑。    
 
 ![](https://raw.githubusercontent.com/junstudys/images/master/%E6%AD%A3%E6%96%B9-%E4%BA%92%E8%81%94%E7%BD%91%E5%B9%B3%E5%9D%87%E8%96%AA%E8%B5%84.png)
+
+同时有很多产业的高新技术行业都主要集中在大城市，比如金融、研发，而且对于个人而言，这些高新技术工作的薪资远远高于制造业。
